Compacted logs work
Added:
- CommonClockConfiguration for import spring configurarion
- String key to `com.hotels.road.offramp.api.Record`
- New `com.hotels.road.offramp.utilities` with the offramp deserialisers
- Added method onramp with `String` version parameter to
  `com.hotels.road.client.http.HttpHandler`
- Added `SimpleRoadClient` constructor with `String` version parameter
  to `com.hotels.road.client.simple.SimpleRoadClient`
- Added `v2` endpoint to `c.h.r.onramp.controller.OnrampController`
- Added `/onramp/v2/**` to `RoadWebSecurityConfigurerAdapter`
- Added `MemoryRoadPersistence` to `com.hotels.road.testdrive` to
  simulate Kafka read/write to persistence

Changed:
- Renamed `SenderEvent` to `InnerMessage`
- Moved deserialisers out of `com.hotels.road.offramp.kafka` and added
  classes for Kafka deserialisation to use their deserialisation
  functionality in TestDrive
- Renamed `com.hotels.road.onramp.api.Event` to `OnMessage`
- Added time to `com.hotels.road.onramp.api.Onramp.sendEvent` and
  renamed to `sendOnMessage`
- Updated implementation of `sendOnMessage`
- Renamed `com.hotels.road.onramp.api.OnrampSender.sendEvent` to
  `sendInnerMessage`
- Moved `OnrampServiceImpl` from `com.hotels.road.onramp.kafka` to `api`
- Updated `endToEndTest` of `TestDriveAppTest` to test onramp `v2`

- Updated all related testing.